test/libsolidity/syntaxTests/nameAndTypeResolution/141_multiple_scopes_suggestions.sol
contract c {
    uint log9 = 2;
    function g() public {
        uint log8 = 3;
        uint var1 = lgox;
    }
}
// ----
// DeclarationError 7576: (101-105): Undeclared identifier. Did you mean "log8" or "log9"?
